[gd_scene load_steps=4 format=3 uid="uid://cnhnjkwj5m8c0"]

[ext_resource type="Script" uid="uid://brasm1hdlc0o" path="res://mint/ui/mint_ui.gd" id="1_puk6k"]
[ext_resource type="PackedScene" uid="uid://0xkwl3f1g4qt" path="res://mint/ui/coin_list.tscn" id="2_gh3s3"]
[ext_resource type="PackedScene" uid="uid://1fcnpv3j3p75" path="res://mint/ui/ingredient_display.tscn" id="2_y7gy8"]

[node name="MintUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_puk6k")
ingredient_display_scene = ExtResource("2_y7gy8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Home"

[node name="CoinList" parent="CanvasLayer/HBoxContainer/VBoxContainer" instance=ExtResource("2_gh3s3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current: 1234"

[node name="IngredientContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/IngredientContainer" instance=ExtResource("2_y7gy8")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Quantity" type="HSlider" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="QuantityLabel" type="Label" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "123"

[node name="MintButton" type="Button" parent="CanvasLayer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mint"
